--- a/Application-SPA/src/styles.scss
+++ b/Application-SPA/src/styles.scss
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 @import '../node_modules/font-awesome/css/font-awesome.css';
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+
 
 .tab-panel {
   border: 1px solid #ddd;
