--- a/Application-SPA/src/app/pages/member/member-edit/member-edit.component.html
+++ b/Application-SPA/src/app/pages/member/member-edit/member-edit.component.html
@@ -37,6 +37,7 @@
         </div>
       </div>
     </div>
+    hassan
     <div class="col-sm-8">
       <div class="tab-panel">
         <tabset class="member-tabset">
