--- a/Application-SPA/src/app/pages/member/member-card/member-card.component.html
+++ b/Application-SPA/src/app/pages/member/member-card/member-card.component.html
@@ -8,7 +8,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" (click)="sendLike(user.id)">
           <fa-icon [icon]="['fa', 'heart']"></fa-icon>
         </button>
       </li>
