--- a/Application-SPA/src/app/pages/member/member-card/member-card.component.html
+++ b/Application-SPA/src/app/pages/member/member-card/member-card.component.html
@@ -13,7 +13,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" [routerLink]="['/members',user.id]" [queryParams]="{tab:3}">
           <fa-icon [icon]="['fa', 'envelope']"></fa-icon>
         </button>
       </li>
