--- a/Application-SPA/src/app/nav/nav.component.html
+++ b/Application-SPA/src/app/nav/nav.component.html
@@ -5,6 +5,8 @@
     <li class="nav-item" [routerLinkActive]="'active'"><a class="nav-link" [routerLink]="['/members']">Matches</a></li>
     <li class="nav-item" [routerLinkActive]="'active'"><a class="nav-link" [routerLink]="['/lists']">Lists</a></li>
     <li class="nav-item" [routerLinkActive]="'active'"><a class="nav-link" [routerLink]="['/messages']">Messages</a></li>
+    <li *appHasRole="['Admin','Moderator']" class="nav-item" [routerLinkActive]="'active'"><a class="nav-link"
+        [routerLink]="['/admin']">Admin</a></li>
   </ul>
 
   <div *ngIf="loggedIn()" class="dropdown top-panel-heading" dropdown>
